@@ -5,6 +5,7 @@
 * Add Gradle project support
 
 * Fix issue where time logged when resolving an issue was not being saved
+* Fix issue where eclipse android projects could not reference local libraries
 * Issue:57 Random ordering of durationworkeds if times match
 * Various DB optimisations
 
